Adding Modules for visulaization,clean data,load data and indicators

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 299,
    "id": "4b29b5bc",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 300,
    "id": "64dbaa3a",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "4  2020-05-22 11:38:59-04:00     A  "
       ]
      },
-     "execution_count": 277,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 301,
    "id": "69e381e5",
    "metadata": {},
    "outputs": [],
@@ -175,22 +175,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a74c404a",
-   "metadata": {
-    "vscode": {
-     "languageId": "markdown"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "f5eddc27",
+   "metadata": {},
    "source": [
-    "To see the cleaned dataset after removing the 'Unnamed: 0' column, use:\n"
+    "To see the cleaned dataset after removing the 'Unnamed: 0' column, use:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 302,
    "id": "e6832346",
    "metadata": {},
    "outputs": [
@@ -290,7 +284,7 @@
        "4  2020-05-22 11:38:59-04:00     A  "
       ]
      },
-     "execution_count": 279,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 303,
    "id": "08033ac6",
    "metadata": {},
    "outputs": [
@@ -346,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 304,
    "id": "40cf3694",
    "metadata": {},
    "outputs": [
@@ -361,7 +355,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 305,
    "id": "1cd67289",
    "metadata": {},
    "outputs": [
@@ -481,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 306,
    "id": "fab56e28",
    "metadata": {},
    "outputs": [
@@ -550,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 307,
    "id": "c38ebc2a",
    "metadata": {},
    "outputs": [
@@ -641,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 308,
    "id": "e69dd946",
    "metadata": {},
    "outputs": [],
@@ -652,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 309,
    "id": "a60d6d0e",
    "metadata": {},
    "outputs": [
@@ -671,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 310,
    "id": "2348ccdb",
    "metadata": {},
    "outputs": [],
@@ -686,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 311,
    "id": "905ff775",
    "metadata": {},
    "outputs": [
@@ -778,7 +772,7 @@
        "4 2020-05-22 15:38:59+00:00  2020      5   22     Friday    15"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,8 +783,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
-   "id": "a4d4f44c",
+   "execution_count": null,
+   "id": "6f69f8a9",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +804,8 @@
       "2018    146924\n",
       "2019    150380\n",
       "2020    105214\n",
-      "Name: count, dtype: int64\n"
+      "Name: count, dtype: int64\n",
+      "11489\n"
      ]
     }
    ],
@@ -819,9 +814,7 @@
     "yearly_trends = df['year'].value_counts().sort_index()\n",
     "\n",
     "# Display the yearly publication counts\n",
-    "print(yearly_trends)\n",
-    "\n",
-    "\n"
+    "print(yearly_trends)"
    ]
   },
   {
@@ -843,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": null,
    "id": "4ce78954",
    "metadata": {},
    "outputs": [
@@ -875,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "id": "ad4d41b5",
    "metadata": {},
    "outputs": [
@@ -902,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "id": "fbe69702",
    "metadata": {},
    "outputs": [
@@ -953,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "id": "5919fb3f",
    "metadata": {},
    "outputs": [
@@ -997,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "id": "bfc301f9",
    "metadata": {},
    "outputs": [
@@ -1023,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "id": "ff97a66a",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "id": "0fa04690",
    "metadata": {},
    "outputs": [
@@ -1120,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "id": "70dd21bc",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
    "id": "d9282f47",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "id": "408624dc",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "id": "3cfdd563",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": null,
    "id": "17f70083",
    "metadata": {},
    "outputs": [],
@@ -1313,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "id": "55118b3a",
    "metadata": {},
    "outputs": [],
@@ -1324,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "id": "eb9758a4",
    "metadata": {},
    "outputs": [],
@@ -1335,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "id": "f7c1ce12",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "id": "655ee874",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "id": "d1312d70",
    "metadata": {},
    "outputs": [
@@ -1450,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "id": "f3914d37",
    "metadata": {},
    "outputs": [],
@@ -1489,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": null,
    "id": "29df48a9",
    "metadata": {},
    "outputs": [],
@@ -1500,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": null,
    "id": "9a33aecd",
    "metadata": {},
    "outputs": [],
@@ -1511,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "id": "3c3f8972",
    "metadata": {},
    "outputs": [],
@@ -1527,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": null,
    "id": "756d4aa1",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
    "id": "5c11dbea",
    "metadata": {},
    "outputs": [
@@ -1648,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "id": "bbbc33e0",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "id": "773cdf0e",
    "metadata": {},
    "outputs": [],
@@ -1900,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": null,
    "id": "36a9499b",
    "metadata": {},
    "outputs": [],
@@ -1910,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": null,
    "id": "bf50c973",
    "metadata": {},
    "outputs": [
@@ -1940,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": null,
    "id": "d110464f",
    "metadata": {},
    "outputs": [],
@@ -1954,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "id": "1e3c79fc",
    "metadata": {},
    "outputs": [],
@@ -1964,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": null,
    "id": "2c253722",
    "metadata": {},
    "outputs": [],
@@ -1978,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "id": "aedece5d",
    "metadata": {},
    "outputs": [
@@ -2021,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "id": "eafbc3fc",
    "metadata": {},
    "outputs": [
@@ -2077,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": null,
    "id": "9b7df447",
    "metadata": {},
    "outputs": [
@@ -2113,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": null,
    "id": "db58c716",
    "metadata": {},
    "outputs": [
@@ -2299,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "id": "afdc232d",
    "metadata": {},
    "outputs": [
@@ -2350,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": null,
    "id": "98b512a8",
    "metadata": {},
    "outputs": [
