Adding Marksdown explanation to the stock data notebooks

--- a/notebooks/AAPL_historical_data.ipynb
+++ b/notebooks/AAPL_historical_data.ipynb
@@ -356,6 +356,70 @@
     "from visuals import plot_indicators\n",
     "plot_indicators(df, ticker_name=\"MSFT\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "963cc219",
+   "metadata": {},
+   "source": [
+    "📊 Technical Indicator Summary (Last 10 Days)\n",
+    "Column\tDescription\n",
+    "Date\tTrading date for each record.\n",
+    "Close\tClosing price of the stock.\n",
+    "SMA_20\t20-day Simple Moving Average — smooths the price trend.\n",
+    "RSI_14\t14-day Relative Strength Index — momentum signal:\n",
+    "🔹 RSI > 70 → Overbought\n",
+    "🔻 RSI < 30 → Oversold\n",
+    "MACD\tMeasures momentum by comparing short- and long-term EMAs.\n",
+    "MACD_Signal\tEMA of the MACD — used to generate buy/sell signals.\n",
+    "MACD_Hist\tDifference between MACD and Signal line:\n",
+    "🔹 Positive → Bullish momentum\n",
+    "🔻 Negative → Bearish momentum\n",
+    "\n",
+    "🔍 Interpretation\n",
+    "RSI:\n",
+    "RSI peaked at 63.58 on 2024-07-17 (strong momentum), then declined to around 49.35 by 2024-07-30.\n",
+    "\n",
+    "It's not overbought (not above 70), but still above 30, indicating neutral to weak bullish momentum.\n",
+    "\n",
+    "MACD:\n",
+    "MACD and Signal lines are declining steadily from:\n",
+    "\n",
+    "MACD: 8.46 → 2.01\n",
+    "\n",
+    "Signal: 8.31 → 4.30\n",
+    "\n",
+    "This suggests waning bullish momentum and a potential trend reversal.\n",
+    "\n",
+    "MACD Histogram:\n",
+    "MACD Histogram values turn negative from 2024-07-18, hitting -2.45 and still negative at the end.\n",
+    "\n",
+    "A falling histogram indicates that the MACD line is moving further below the signal line → bearish signal.\n",
+    "\n",
+    "SMA vs Close:\n",
+    "The Close price is below the SMA_20 throughout the 10-day period:\n",
+    "\n",
+    "E.g., on 2024-07-30: Close = 218.80, SMA_20 = 225.12\n",
+    "\n",
+    "This shows the price is trading below the average, confirming bearish trend pressure.\n",
+    "\n",
+    "✅ Key Takeaways:\n",
+    "⚠️ Bearish signals emerging:\n",
+    "\n",
+    "Declining RSI\n",
+    "\n",
+    "Negative MACD histogram\n",
+    "\n",
+    "Close price below SMA\n",
+    "\n",
+    "No clear buy signal yet — you may want to wait until:\n",
+    "\n",
+    "RSI rebounds toward 60–70\n",
+    "\n",
+    "MACD crosses back above the Signal line\n",
+    "\n",
+    "Close price rises above SMA_20"
+   ]
   }
  ],
  "metadata": {
