--- a/notebooks/AMZN_historical_data.ipynb
+++ b/notebooks/AMZN_historical_data.ipynb
@@ -357,6 +357,59 @@
     "from visuals import plot_indicators\n",
     "plot_indicators(df, ticker_name=\"MSFT\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bf1dcb1",
+   "metadata": {},
+   "source": [
+    "📊 AMZN Technical Indicator Summary (Last 10 Days)\n",
+    "Column\tDescription\n",
+    "Date\tTrading date for each record.\n",
+    "Close\tClosing price of AMZN.\n",
+    "SMA_20\t20-day Simple Moving Average — reflects short-term trend.\n",
+    "RSI_14\t14-day Relative Strength Index — momentum indicator:\n",
+    "🔺 RSI > 70 = Overbought\n",
+    "🔻 RSI < 30 = Oversold\n",
+    "MACD\tMACD line showing trend momentum.\n",
+    "MACD_Signal\tSignal line (9-day EMA of MACD) — used for crossover signals.\n",
+    "MACD_Hist\tDifference between MACD and Signal — visual representation of momentum strength.\n",
+    "\n",
+    "🔍 Interpretation\n",
+    "RSI:\n",
+    "RSI started at 43.45 on 2024-07-17 and dropped as low as 36.13 by 2024-07-25, showing weakening momentum.\n",
+    "\n",
+    "It ended at 40.41 on 2024-07-30, still in neutral territory, but closer to oversold.\n",
+    "\n",
+    "Overall: Bearish momentum, but not yet deeply oversold.\n",
+    "\n",
+    "MACD & Histogram:\n",
+    "MACD moved from +1.89 to -2.28, consistently falling over the 10-day window.\n",
+    "\n",
+    "Histogram is negative throughout, showing MACD is below Signal — this confirms bearish pressure.\n",
+    "\n",
+    "The lowest histogram value (-2.01) occurred on 2024-07-25, signaling peak bearish momentum.\n",
+    "\n",
+    "SMA vs Close:\n",
+    "On all days, the Close < SMA_20, confirming that the price is trending downward.\n",
+    "\n",
+    "Example: On 2024-07-30, Close = 181.71, SMA_20 = 190.16\n",
+    "\n",
+    "This supports the downtrend observed in the other indicators.\n",
+    "\n",
+    "✅ Key Takeaways\n",
+    "📉 All indicators point to a bearish trend:\n",
+    "\n",
+    "MACD line is falling below the Signal line.\n",
+    "\n",
+    "RSI is hovering in the 36–44 range.\n",
+    "\n",
+    "Price is consistently below the 20-day SMA.\n",
+    "\n",
+    "⚠️ No current buy signals — MACD crossover or RSI recovery > 50 needed.\n",
+    "\n",
+    "Conservative traders may wait for MACD reversal or RSI bottoming out before entering."
+   ]
   }
  ],
  "metadata": {
