--- a/notebooks/GOOG_historical_data.ipynb
+++ b/notebooks/GOOG_historical_data.ipynb
@@ -356,6 +356,67 @@
     "from visuals import plot_indicators\n",
     "plot_indicators(df, ticker_name=\"MSFT\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eced97b",
+   "metadata": {},
+   "source": [
+    "📊 GOOG Technical Indicator Summary (Last 10 Days)\n",
+    "Column\tDescription\n",
+    "Date\tTrading day.\n",
+    "Close\tClosing price of GOOG.\n",
+    "SMA_20\t20-day Simple Moving Average — tracks short-term trend direction.\n",
+    "RSI_14\t14-day Relative Strength Index — momentum gauge:\n",
+    "🔺 RSI > 70 = Overbought\n",
+    "🔻 RSI < 30 = Oversold\n",
+    "MACD\tMeasures momentum through EMA crossover.\n",
+    "MACD_Signal\t9-day EMA of MACD — helps spot changes in trend.\n",
+    "MACD_Hist\tMACD - Signal — shows strength and direction of momentum.\n",
+    "\n",
+    "🔍 Indicator Breakdown\n",
+    "RSI (Relative Strength Index)\n",
+    "Dropped from 47.82 → 31.84 between July 17–26, indicating declining momentum.\n",
+    "\n",
+    "RSI bottomed out at 31.84 — very close to oversold territory (30).\n",
+    "\n",
+    "Slight rebound to 37.92 on July 30 — early sign of possible stabilization.\n",
+    "\n",
+    "MACD & Histogram\n",
+    "MACD steadily fell from 2.44 to -2.71, indicating a bearish crossover occurred.\n",
+    "\n",
+    "MACD Histogram also declined from -0.86 to -2.41, confirming intensifying bearish momentum through July 26.\n",
+    "\n",
+    "Last few days show smaller histogram losses (e.g., -2.29 → -2.05) — possibly momentum weakening.\n",
+    "\n",
+    "SMA vs Close\n",
+    "Every closing price in the 10-day period is below the 20-day SMA:\n",
+    "\n",
+    "e.g., July 30 → Close = 171.86, SMA_20 = 182.53\n",
+    "\n",
+    "This supports a downward trend and resistance near the SMA.\n",
+    "\n",
+    "✅ Key Takeaways for GOOG\n",
+    "🔻 Bearish trend continues, as confirmed by:\n",
+    "\n",
+    "Falling RSI (approaching oversold).\n",
+    "\n",
+    "MACD < Signal, with negative histogram values.\n",
+    "\n",
+    "Price consistently below the SMA_20.\n",
+    "\n",
+    "🛑 No bullish reversal signal yet, but:\n",
+    "\n",
+    "RSI rebounding slightly and histogram losses slowing may indicate bearish exhaustion.\n",
+    "\n",
+    "🕵️‍♂️ Watch for:\n",
+    "\n",
+    "RSI moving above 40+\n",
+    "\n",
+    "MACD crossing above Signal\n",
+    "\n",
+    "Price breaking above SMA_20"
+   ]
   }
  ],
  "metadata": {
