--- a/notebooks/META_historical_data.ipynb
+++ b/notebooks/META_historical_data.ipynb
@@ -356,6 +356,69 @@
     "from visuals import plot_indicators\n",
     "plot_indicators(df, ticker_name=\"MSFT\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96bfc522",
+   "metadata": {},
+   "source": [
+    "📊 META Technical Indicator Summary (Last 10 Days)\n",
+    "Column\tDescription\n",
+    "Date\tTrading date\n",
+    "Close\tDaily closing price of META\n",
+    "SMA_20\t20-day Simple Moving Average — tracks short-term trend\n",
+    "RSI_14\t14-day Relative Strength Index — identifies momentum and overbought/oversold conditions\n",
+    "MACD\tMeasures momentum using moving average convergence\n",
+    "MACD_Signal\t9-day EMA of MACD — helps identify signal crossovers\n",
+    "MACD_Hist\tMACD - Signal — visualizes momentum strength\n",
+    "\n",
+    "🔍 Indicator Analysis\n",
+    "RSI (Relative Strength Index)\n",
+    "RSI climbed from 33.16 (July 17) to 46.20 (July 23) → short recovery.\n",
+    "\n",
+    "Declined again to 39.79 by July 30, reflecting weakening momentum.\n",
+    "\n",
+    "RSI stayed below 50 the entire period → reflects a bearish bias.\n",
+    "\n",
+    "📉 No oversold levels (<30) reached, but weakness is evident.\n",
+    "\n",
+    "MACD & Histogram\n",
+    "MACD is deep in negative territory, dropping from -0.56 to -10.36 over 10 days.\n",
+    "\n",
+    "MACD Histogram starts highly negative (-6.41), dips further, then begins to shrink (-6.74 → -4.05) — suggesting bearish momentum is slowing.\n",
+    "\n",
+    "MACD remains well below the Signal Line throughout → clear bearish trend.\n",
+    "\n",
+    "SMA vs Close Price\n",
+    "META's closing price is consistently below the 20-day SMA, indicating a downtrend.\n",
+    "\n",
+    "Example: July 30 → Close = 463.19, SMA_20 = 492.54\n",
+    "\n",
+    "No attempt to break above SMA seen → continued resistance overhead.\n",
+    "\n",
+    "✅ Key Takeaways for META\n",
+    "⚠️ META is in a strong downtrend, as shown by:\n",
+    "\n",
+    "Persistent negative MACD and Histogram.\n",
+    "\n",
+    "Closing price staying below the 20-day SMA.\n",
+    "\n",
+    "RSI bouncing but staying below neutral.\n",
+    "\n",
+    "🔍 Potential bottoming signs:\n",
+    "\n",
+    "MACD Histogram shows reduced bearish momentum in recent days.\n",
+    "\n",
+    "RSI flattening around 40 could signal bearish exhaustion.\n",
+    "\n",
+    "📌 Watch for:\n",
+    "\n",
+    "RSI recovery above 50\n",
+    "\n",
+    "MACD flattening or crossing Signal\n",
+    "\n",
+    "Price testing/breaking above the 20-day SMA"
+   ]
   }
  ],
  "metadata": {
