--- a/notebooks/NVDA_historical_data.ipynb
+++ b/notebooks/NVDA_historical_data.ipynb
@@ -356,6 +356,61 @@
     "from visuals import plot_indicators\n",
     "plot_indicators(df, ticker_name=\"MSFT\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dbbe81f",
+   "metadata": {},
+   "source": [
+    "📊 NVDA Technical Indicator Summary (Last 10 Days)\n",
+    "Column\tDescription\n",
+    "Date\tTrading date\n",
+    "Close\tDaily closing price of NVDA\n",
+    "SMA_20\t20-day Simple Moving Average — shows the short-term trend\n",
+    "RSI_14\t14-day Relative Strength Index — identifies momentum and overbought/oversold signals\n",
+    "MACD\tMoving Average Convergence Divergence — measures trend and momentum shifts\n",
+    "MACD_Signal\t9-day EMA of MACD — used for buy/sell signals\n",
+    "MACD_Hist\tMACD minus Signal — shows momentum strength\n",
+    "\n",
+    "🔍 Indicator Analysis\n",
+    "RSI (Relative Strength Index)\n",
+    "RSI started at 43.79 (July 17) and rose briefly to 50.66 (July 22), signaling mild bullish momentum.\n",
+    "\n",
+    "Then it steadily declined to 33.35 (July 30), nearing oversold territory (<30).\n",
+    "\n",
+    "This shows weakening buying pressure and growing bearish momentum.\n",
+    "\n",
+    "MACD & Histogram\n",
+    "MACD steadily declined from 2.51 → -2.95, crossing below zero on July 24, which is bearish.\n",
+    "\n",
+    "MACD Histogram is persistently negative, dropping from -1.57 → -2.56, confirming increasing bearish momentum.\n",
+    "\n",
+    "No bullish crossover (MACD > Signal) seen in this window.\n",
+    "\n",
+    "SMA vs Close Price\n",
+    "NVDA’s closing price is well below its 20-day SMA throughout the period:\n",
+    "\n",
+    "July 30: Close = 103.73, SMA_20 = 122.04\n",
+    "\n",
+    "This confirms a strong short-term downtrend.\n",
+    "\n",
+    "No attempts to retest the SMA indicate lack of reversal strength.\n",
+    "\n",
+    "✅ Key Takeaways for NVDA\n",
+    "⚠️ Bearish sentiment is strong, with:\n",
+    "\n",
+    "Persistent negative MACD and widening histogram.\n",
+    "\n",
+    "RSI heading toward oversold territory.\n",
+    "\n",
+    "Price trading far below the 20-day SMA.\n",
+    "\n",
+    "📉 Breakdown on July 30 to $103.73 marks the lowest point in this series.\n",
+    "\n",
+    "🔍 If RSI dips below 30 or MACD Histogram starts shrinking, a bottoming pattern may emerge.\n",
+    "\n",
+    "Until then, trend remains decidedly bearish"
+   ]
   }
  ],
  "metadata": {
